<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmw_iceoryx2_cxx_demo_nodes</name>
  <version>0.0.1</version>
  <description>Demo nodes for verifying functionality of rmw_iceoryx2_cxx</description>
  <maintainer email="jeff@ithier.dev">Jeff Ithier</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_cpp</depend>
  <depend>rclcpp</depend>
  <!-- <depend>std_msgs</depend> -->
  <depend>rmw_iceoryx2_cxx_test_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
