<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmw_iceoryx2_cxx_test_msgs</name>
  <version>0.1.0</version>
  <description>Messages for testing rmw_iceoryx2_cxx</description>
  <author email="jeff@ithier.dev">Jeff Ithier</author>
  <maintainer email="oss-ros@ekxide.io">ekxide developers</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rosidl_default_generators</depend>
  <depend>test_interface_files</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <member_of_group>rosidl_interface_packages</member_of_group>

</package>
